--- a/docs/GDPs/gdp-0002.rst
+++ b/docs/GDPs/gdp-0002.rst
@@ -2,7 +2,7 @@
 GDP 2 — Boundary Computation
 ============================
 
-:Author: Rhea George <rheag@vulcan.com>
+:Author: Rhea George <rheag@vulcan.com> - Vulcan Climate Modeling
 :Status: Draft
 :Type: Feature
 :Created: 21-04-2020
